# imglib

./: CMakeLists.txt  README.md  bufferImage.cpp  colorConversion.cpp  convert.cpp  crop.cpp  image.cpp  jpeg.cpp  math.cpp  png.cpp  ppm.cpp  quantize.cpp  scale.cpp  simpleImage.cpp
cl/: kernels_cl.cpp  openCLImage.cpp  openCLImageBuffer.cpp
cmake/: EmbedFile.cmake  Filesystem.cmake  FindFastCV.cmake  target_filesystem.h.in
cuda/: convert.cu  copy.cpp  simpleImage.cpp  translate.cu
embed/: CMakeLists.txt  getopt.cpp  main.cpp
fastcv/: scale.cpp
imglib/: boundingBox.h  bufferImage.h  colorConversion.h  colorConversion.inl  convert.h  copy.h  crop.h  draw.h  format_type.h  image.h  imageIo.h  imglib_filesystem.h  interpolation.h  jpeg.h  math.h  pixelOperations.h  png.h  ppm.h  quantize.h  scale.h  simpleImage.h  transform.h  translate.h  vec.h  vec_eigen3.h  vec_glm.h
imglib/cl/: colorConversion_cl.h  operators_cl.h
imglib/cuda/: convert.h  copy.h  simpleImage.h  util.h
imglib/fastcv/: scale.h
include/imglib/: colorConversion.h  colorConversion.inl  image.h  imageIo.h  simpleImage.h  transform.inl  utils_cl.h
kernels/: atomic.cl  colorConversion.cl  operators.cl  utils.cl
source/: colorConversion.cpp  colorConversion_cl.cpp  filesystem.cpp  image.cpp  jpeg.cpp  operators_cl.cpp  png.cpp  ppm.cpp  simpleImage.cpp  utils_cl.cpp
